--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "now-ui-dashboard",
-  "description": "Bootstrap 4 Now UI Design",
-  "version": "1.2.0",
-  "homepage": "http://creative-tim.com/product/now-ui-dashboard",
-  "author": "Creative Tim",
-  "license": "Creative Tim License <www.creative-tim.com/license>",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-install": "^1.1.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-open": "^3.0.1"
+  "name": "Team Pika",
+  "version": "1.0.0",
+  "description": "An energy data visualization and analytics tool.",
+  "author": "Team Pika",
+  "license": "MIT License",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HACC2018/Team-Pika"
+
+  },
+  "dependencies": {
   }
 }
