--- a/lambdas/pom.xml
+++ b/lambdas/pom.xml
@@ -36,6 +36,11 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-lambda</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
